src/antlr/output/WhileGrammarParser.java
// $ANTLR 3.5.1 /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3 2024-11-22 16:16:43

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;
@SuppressWarnings("all")
public class WhileGrammarParser extends DebugParser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMENT", "DEC", "IDENT", "MAJ", 
		"MIN", "SYMBOL", "VARIABLE", "WS", "'%'", "'('", "')'", "','", "':'", 
		"':='", "';'", "'=?'", "'cons'", "'do'", "'else'", "'fi'", "'for'", "'foreach'", 
		"'function'", "'hd'", "'if'", "'in'", "'list'", "'nil'", "'nop'", "'od'", 
		"'read'", "'then'", "'tl'", "'while'", "'write'"
	};
	public static final int EOF=-1;
	public static final int T__12=12;
	public static final int T__13=13;
	public static final int T__14=14;
	public static final int T__15=15;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int COMMENT=4;
	public static final int DEC=5;
	public static final int IDENT=6;
	public static final int MAJ=7;
	public static final int MIN=8;
	public static final int SYMBOL=9;
	public static final int VARIABLE=10;
	public static final int WS=11;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public static final String[] ruleNames = new String[] {
		"invalidRule", "function", "command_for", "command_foreach", "commands", 
		"exprs", "exprbase4", "input", "command_while", "command", "exprbase3", 
		"definition", "exprbase", "exprbase2", "command_if", "input_stub", "command_vars", 
		"expression", "program", "command_nop", "lexpr", "exprbase1", "output", 
		"vars"
	};

	public static final boolean[] decisionCanBacktrack = new boolean[] {
		false, // invalid decision
		false, false, false, false, false, false, false, false, false, false, 
		    false, false, false
	};

 
	public int ruleLevel = 0;
	public int getRuleLevel() { return ruleLevel; }
	public void incRuleLevel() { ruleLevel++; }
	public void decRuleLevel() { ruleLevel--; }
	public WhileGrammarParser(TokenStream input) {
		this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
	}
	public WhileGrammarParser(TokenStream input, int port, RecognizerSharedState state) {
		super(input, state);
		DebugEventSocketProxy proxy =
			new DebugEventSocketProxy(this, port, null);

		setDebugListener(proxy);
		try {
			proxy.handshake();
		}
		catch (IOException ioe) {
			reportError(ioe);
		}
	}

	public WhileGrammarParser(TokenStream input, DebugEventListener dbg) {
		super(input, dbg, new RecognizerSharedState());
	}

	protected boolean evalPredicate(boolean result, String predicate) {
		dbg.semanticPredicate(result, predicate);
		return result;
	}

	@Override public String[] getTokenNames() { return WhileGrammarParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3"; }



	// $ANTLR start "program"
	// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:19:1: program : function ( program )? ;
	public final void program() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "program");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(19, 0);

		try {
			// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:19:8: ( function ( program )? )
			dbg.enterAlt(1);

			// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:19:10: function ( program )?
			{
			dbg.location(19,10);
			pushFollow(FOLLOW_function_in_program225);
			function();
			state._fsp--;
			dbg.location(19,19);
			// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:19:19: ( program )?
			int alt1=2;
			try { dbg.enterSubRule(1);
			try { dbg.enterDecision(1, decisionCanBacktrack[1]);

			int LA1_0 = input.LA(1);
			if ( (LA1_0==26) ) {
				alt1=1;
			}
			} finally {dbg.exitDecision(1);}

			switch (alt1) {
				case 1 :
					dbg.enterAlt(1);

					// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:19:20: program
					{
					dbg.location(19,20);
					pushFollow(FOLLOW_program_in_program228);
					program();
					state._fsp--;

					}
					break;

			}
			} finally {dbg.exitSubRule(1);}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(19, 28);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "program");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "program"



	// $ANTLR start "function"
	// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:20:1: function : 'function' SYMBOL ':' definition ;
	public final void function() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "function");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(20, 0);

		try {
			// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:20:9: ( 'function' SYMBOL ':' definition )
			dbg.enterAlt(1);

			// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:20:11: 'function' SYMBOL ':' definition
			{
			dbg.location(20,11);
			match(input,26,FOLLOW_26_in_function236); dbg.location(20,22);
			match(input,SYMBOL,FOLLOW_SYMBOL_in_function238); dbg.location(20,29);
			match(input,16,FOLLOW_16_in_function240); dbg.location(20,33);
			pushFollow(FOLLOW_definition_in_function242);
			definition();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(20, 42);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "function");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "function"



	// $ANTLR start "definition"
	// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:21:1: definition : 'read' input '%' commands '%' 'write' output ;
	public final void definition() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "definition");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(21, 0);

		try {
			// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:21:11: ( 'read' input '%' commands '%' 'write' output )
			dbg.enterAlt(1);

			// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:21:13: 'read' input '%' commands '%' 'write' output
			{
			dbg.location(21,13);
			match(input,34,FOLLOW_34_in_definition248); dbg.location(21,20);
			pushFollow(FOLLOW_input_in_definition250);
			input();
			state._fsp--;
			dbg.location(21,26);
			match(input,12,FOLLOW_12_in_definition252); dbg.location(21,30);
			pushFollow(FOLLOW_commands_in_definition254);
			commands();
			state._fsp--;
			dbg.location(21,39);
			match(input,12,FOLLOW_12_in_definition256); dbg.location(21,43);
			match(input,38,FOLLOW_38_in_definition258); dbg.location(21,51);
			pushFollow(FOLLOW_output_in_definition260);
			output();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(21, 56);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "definition");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "definition"



	// $ANTLR start "input"
	// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:22:1: input : ( input_stub )? ;
	public final void input() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "input");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(22, 0);

		try {
			// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:22:6: ( ( input_stub )? )
			dbg.enterAlt(1);

			// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:22:8: ( input_stub )?
			{
			dbg.location(22,8);
			// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:22:8: ( input_stub )?
			int alt2=2;
			try { dbg.enterSubRule(2);
			try { dbg.enterDecision(2, decisionCanBacktrack[2]);

			int LA2_0 = input.LA(1);
			if ( (LA2_0==VARIABLE) ) {
				alt2=1;
			}
			} finally {dbg.exitDecision(2);}

			switch (alt2) {
				case 1 :
					dbg.enterAlt(1);

					// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:22:8: input_stub
					{
					dbg.location(22,8);
					pushFollow(FOLLOW_input_stub_in_input266);
					input_stub();
					state._fsp--;

					}
					break;

			}
			} finally {dbg.exitSubRule(2);}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(22, 18);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "input");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "input"



	// $ANTLR start "input_stub"
	// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:23:1: input_stub : VARIABLE ( ',' input_stub )? ;
	public final void input_stub() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "input_stub");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(23, 0);

		try {
			// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:23:11: ( VARIABLE ( ',' input_stub )? )
			dbg.enterAlt(1);

			// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:23:13: VARIABLE ( ',' input_stub )?
			{
			dbg.location(23,13);
			match(input,VARIABLE,FOLLOW_VARIABLE_in_input_stub273); dbg.location(23,22);
			// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:23:22: ( ',' input_stub )?
			int alt3=2;
			try { dbg.enterSubRule(3);
			try { dbg.enterDecision(3, decisionCanBacktrack[3]);

			int LA3_0 = input.LA(1);
			if ( (LA3_0==15) ) {
				alt3=1;
			}
			} finally {dbg.exitDecision(3);}

			switch (alt3) {
				case 1 :
					dbg.enterAlt(1);

					// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:23:23: ',' input_stub
					{
					dbg.location(23,23);
					match(input,15,FOLLOW_15_in_input_stub276); dbg.location(23,27);
					pushFollow(FOLLOW_input_stub_in_input_stub278);
					input_stub();
					state._fsp--;

					}
					break;

			}
			} finally {dbg.exitSubRule(3);}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(23, 38);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "input_stub");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "input_stub"



	// $ANTLR start "output"
	// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:24:1: output : VARIABLE ( ',' output )? ;
	public final void output() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "output");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(24, 0);

		try {
			// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:24:7: ( VARIABLE ( ',' output )? )
			dbg.enterAlt(1);

			// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:24:9: VARIABLE ( ',' output )?
			{
			dbg.location(24,9);
			match(input,VARIABLE,FOLLOW_VARIABLE_in_output286); dbg.location(24,18);
			// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:24:18: ( ',' output )?
			int alt4=2;
			try { dbg.enterSubRule(4);
			try { dbg.enterDecision(4, decisionCanBacktrack[4]);

			int LA4_0 = input.LA(1);
			if ( (LA4_0==15) ) {
				alt4=1;
			}
			} finally {dbg.exitDecision(4);}

			switch (alt4) {
				case 1 :
					dbg.enterAlt(1);

					// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:24:19: ',' output
					{
					dbg.location(24,19);
					match(input,15,FOLLOW_15_in_output289); dbg.location(24,23);
					pushFollow(FOLLOW_output_in_output291);
					output();
					state._fsp--;

					}
					break;

			}
			} finally {dbg.exitSubRule(4);}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(24, 30);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "output");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "output"



	// $ANTLR start "vars"
	// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:26:1: vars : VARIABLE ( ',' vars )? ;
	public final void vars() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "vars");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(26, 0);

		try {
			// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:26:5: ( VARIABLE ( ',' vars )? )
			dbg.enterAlt(1);

			// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:26:7: VARIABLE ( ',' vars )?
			{
			dbg.location(26,7);
			match(input,VARIABLE,FOLLOW_VARIABLE_in_vars300); dbg.location(26,16);
			// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:26:16: ( ',' vars )?
			int alt5=2;
			try { dbg.enterSubRule(5);
			try { dbg.enterDecision(5, decisionCanBacktrack[5]);

			int LA5_0 = input.LA(1);
			if ( (LA5_0==15) ) {
				alt5=1;
			}
			} finally {dbg.exitDecision(5);}

			switch (alt5) {
				case 1 :
					dbg.enterAlt(1);

					// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:26:17: ',' vars
					{
					dbg.location(26,17);
					match(input,15,FOLLOW_15_in_vars303); dbg.location(26,21);
					pushFollow(FOLLOW_vars_in_vars305);
					vars();
					state._fsp--;

					}
					break;

			}
			} finally {dbg.exitSubRule(5);}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(26, 26);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "vars");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "vars"



	// $ANTLR start "commands"
	// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:28:1: commands : command ( ';' commands )? ;
	public final void commands() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "commands");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(28, 0);

		try {
			// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:28:9: ( command ( ';' commands )? )
			dbg.enterAlt(1);

			// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:28:11: command ( ';' commands )?
			{
			dbg.location(28,11);
			pushFollow(FOLLOW_command_in_commands314);
			command();
			state._fsp--;
			dbg.location(28,19);
			// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:28:19: ( ';' commands )?
			int alt6=2;
			try { dbg.enterSubRule(6);
			try { dbg.enterDecision(6, decisionCanBacktrack[6]);

			int LA6_0 = input.LA(1);
			if ( (LA6_0==18) ) {
				alt6=1;
			}
			} finally {dbg.exitDecision(6);}

			switch (alt6) {
				case 1 :
					dbg.enterAlt(1);

					// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:28:20: ';' commands
					{
					dbg.location(28,20);
					match(input,18,FOLLOW_18_in_commands317); dbg.location(28,24);
					pushFollow(FOLLOW_commands_in_commands319);
					commands();
					state._fsp--;

					}
					break;

			}
			} finally {dbg.exitSubRule(6);}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(28, 33);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "commands");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "commands"



	// $ANTLR start "exprs"
	// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:30:1: exprs : expression ( ',' exprs )? ;
	public final void exprs() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "exprs");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(30, 0);

		try {
			// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:30:6: ( expression ( ',' exprs )? )
			dbg.enterAlt(1);

			// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:30:8: expression ( ',' exprs )?
			{
			dbg.location(30,8);
			pushFollow(FOLLOW_expression_in_exprs328);
			expression();
			state._fsp--;
			dbg.location(30,19);
			// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:30:19: ( ',' exprs )?
			int alt7=2;
			try { dbg.enterSubRule(7);
			try { dbg.enterDecision(7, decisionCanBacktrack[7]);

			int LA7_0 = input.LA(1);
			if ( (LA7_0==15) ) {
				alt7=1;
			}
			} finally {dbg.exitDecision(7);}

			switch (alt7) {
				case 1 :
					dbg.enterAlt(1);

					// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:30:20: ',' exprs
					{
					dbg.location(30,20);
					match(input,15,FOLLOW_15_in_exprs331); dbg.location(30,24);
					pushFollow(FOLLOW_exprs_in_exprs333);
					exprs();
					state._fsp--;

					}
					break;

			}
			} finally {dbg.exitSubRule(7);}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(30, 30);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "exprs");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "exprs"



	// $ANTLR start "command_vars"
	// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:32:1: command_vars : vars ':=' exprs ;
	public final void command_vars() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "command_vars");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(32, 0);

		try {
			// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:32:13: ( vars ':=' exprs )
			dbg.enterAlt(1);

			// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:32:15: vars ':=' exprs
			{
			dbg.location(32,15);
			pushFollow(FOLLOW_vars_in_command_vars342);
			vars();
			state._fsp--;
			dbg.location(32,20);
			match(input,17,FOLLOW_17_in_command_vars344); dbg.location(32,25);
			pushFollow(FOLLOW_exprs_in_command_vars346);
			exprs();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(32, 29);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "command_vars");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "command_vars"



	// $ANTLR start "command_if"
	// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:33:1: command_if : 'if' expression 'then' commands ( 'else' commands )? 'fi' ;
	public final void command_if() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "command_if");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(33, 0);

		try {
			// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:33:11: ( 'if' expression 'then' commands ( 'else' commands )? 'fi' )
			dbg.enterAlt(1);

			// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:33:13: 'if' expression 'then' commands ( 'else' commands )? 'fi'
			{
			dbg.location(33,13);
			match(input,28,FOLLOW_28_in_command_if352); dbg.location(33,18);
			pushFollow(FOLLOW_expression_in_command_if354);
			expression();
			state._fsp--;
			dbg.location(33,29);
			match(input,35,FOLLOW_35_in_command_if356); dbg.location(33,36);
			pushFollow(FOLLOW_commands_in_command_if358);
			commands();
			state._fsp--;
			dbg.location(33,45);
			// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:33:45: ( 'else' commands )?
			int alt8=2;
			try { dbg.enterSubRule(8);
			try { dbg.enterDecision(8, decisionCanBacktrack[8]);

			int LA8_0 = input.LA(1);
			if ( (LA8_0==22) ) {
				alt8=1;
			}
			} finally {dbg.exitDecision(8);}

			switch (alt8) {
				case 1 :
					dbg.enterAlt(1);

					// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:33:46: 'else' commands
					{
					dbg.location(33,46);
					match(input,22,FOLLOW_22_in_command_if361); dbg.location(33,53);
					pushFollow(FOLLOW_commands_in_command_if363);
					commands();
					state._fsp--;

					}
					break;

			}
			} finally {dbg.exitSubRule(8);}
			dbg.location(33,64);
			match(input,23,FOLLOW_23_in_command_if367); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(33, 67);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "command_if");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "command_if"



	// $ANTLR start "command_while"
	// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:34:1: command_while : 'while' expression 'do' commands 'od' ;
	public final void command_while() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "command_while");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(34, 0);

		try {
			// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:34:14: ( 'while' expression 'do' commands 'od' )
			dbg.enterAlt(1);

			// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:34:16: 'while' expression 'do' commands 'od'
			{
			dbg.location(34,16);
			match(input,37,FOLLOW_37_in_command_while373); dbg.location(34,24);
			pushFollow(FOLLOW_expression_in_command_while375);
			expression();
			state._fsp--;
			dbg.location(34,35);
			match(input,21,FOLLOW_21_in_command_while377); dbg.location(34,40);
			pushFollow(FOLLOW_commands_in_command_while379);
			commands();
			state._fsp--;
			dbg.location(34,49);
			match(input,33,FOLLOW_33_in_command_while381); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(34, 52);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "command_while");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "command_while"



	// $ANTLR start "command_for"
	// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:35:1: command_for : 'for' expression 'do' commands 'od' ;
	public final void command_for() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "command_for");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(35, 0);

		try {
			// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:35:12: ( 'for' expression 'do' commands 'od' )
			dbg.enterAlt(1);

			// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:35:14: 'for' expression 'do' commands 'od'
			{
			dbg.location(35,14);
			match(input,24,FOLLOW_24_in_command_for387); dbg.location(35,20);
			pushFollow(FOLLOW_expression_in_command_for389);
			expression();
			state._fsp--;
			dbg.location(35,31);
			match(input,21,FOLLOW_21_in_command_for391); dbg.location(35,36);
			pushFollow(FOLLOW_commands_in_command_for393);
			commands();
			state._fsp--;
			dbg.location(35,45);
			match(input,33,FOLLOW_33_in_command_for395); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(35, 48);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "command_for");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "command_for"



	// $ANTLR start "command_foreach"
	// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:36:1: command_foreach : 'foreach' VARIABLE 'in' expression 'do' commands 'od' ;
	public final void command_foreach() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "command_foreach");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(36, 0);

		try {
			// /Users/tomchauvel/Documents/GitHub/s7-tlc-projet/src/WhileGrammar.g3:36:16: ( 'foreach' VARIABLE 'in' expression 'do' commands 'od' )
			dbg.enterAlt(1);
